Fixed CSS issue were component_data period don't wrap as expected when component width is small

--- a/core/component_date/css/component_date.less
+++ b/core/component_date/css/component_date.less
@@ -24,29 +24,15 @@
 				position: relative;
 				width: 8.75rem;
 				display: flex;
+				flex-wrap: wrap;
 				align-items: center;
 
 				&.period {
 					width: unset;
 				}
 
-				>a { // icon calendar
-					position: absolute;
-					right: 0.5rem;
-					top: 0.33rem;
-					opacity: 0.6;
-					z-index: 1;
-				}
-				.input_period{
-					width: 3.5em;
-					text-align: center;
-				}
-				.input_date {
-					letter-spacing: 0.05em;
-					font-family: 'date_separator', apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-				}
-				.input_time{
-					letter-spacing: 0.1em;
+				>input {
+					margin-bottom: 0.25rem;
 				}
 
 				>label {
@@ -58,6 +44,26 @@
 						margin-right: 0;
 					}
 				}
+
+				>a { // icon calendar
+					position: absolute;
+					right: 0.5rem;
+					top: 0.33rem;
+					opacity: 0.6;
+					z-index: 1;
+				}
+				.input_period {
+					width: 3.5em;
+					text-align: center;
+				}
+				.input_date {
+					letter-spacing: 0.05em;
+					font-family: 'date_separator', apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+				}
+				.input_time {
+					letter-spacing: 0.1em;
+				}
+
 
   				@font-face {
 					font-family: 'date_separator';
